test/libsolidity/syntaxTests/constructor/constructor_without_implementation.sol
contract C {
	constructor();
}
// ----
// TypeError 5700: (14-28='constructor();'): Constructor must be implemented if declared.
